Update README and CI for Foundry
Add instructions for installing and using Foundry, update GitHub Actions workflow, and configure Foundry for CI.

* **README.md**
  - Add a section to explain how to install Foundry.
  - Add a section to explain how to run tests using Foundry.

* **.github/workflows/test.yml**
  - Update the `actions/checkout` version to `v3`.
  - Add a step to install Foundry using the provided command.

* **foundry.toml**
  - Add a section to specify the Foundry profile for CI.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/etherfi-protocol/avs-smart-contracts?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,13 @@ jobs:
     name: Foundry project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: Install Foundry
+        run: |
+          curl -L https://foundry.paradigm.xyz | bash
 
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
