--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,3 +36,8 @@ jobs:
         run: |
           forge test -vvv
         id: test
+
+      - name: Run Forge tests with fork
+        run: |
+          forge test --fork-url <your_rpc_url>
+        id: test-fork
