Enhance security of AvsOperator and AvsOperatorManager contracts
Add input validation, custom error messages, and multi-signature wallet functionality to `AvsOperator` and `AvsOperatorManager` contracts, and update deployment script and GitHub workflow.

* **AvsOperator.sol**
  - Add input validation for `forwardCall` and `registerAsOperator` functions.
  - Add custom error messages for `require` statements in `initialize` and `managerOnly` modifier.
* **AvsOperatorManager.sol**
  - Add input validation for `registerAsOperator` function.
  - Add custom error messages for `require` statements in `initialize` and `onlyAdmin` modifier.
  - Implement multi-signature wallet for critical operations.
* **deploy.s.sol**
  - Add input validation for `run` function.
  - Add custom error messages for `require` statements in `run` function.
* **test.yml**
  - Add steps to run MythX, Slither, and Echidna for automated testing.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/etherfi-protocol/avs-smart-contracts/tree/arpa-registration-fix?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,15 @@ jobs:
         run: |
           forge test -vvv
         id: test
+
+      - name: Run MythX analysis
+        run: |
+          mythx analyze --mode quick
+
+      - name: Run Slither analysis
+        run: |
+          slither .
+
+      - name: Run Echidna tests
+        run: |
+          echidna-test .
